notes: ES6新的数据结构笔记

--- a/revise-es6.html
+++ b/revise-es6.html
@@ -109,6 +109,37 @@
         // 交换时
         //      0x002   a 2
         //      0x003   b 1
+        // 
+        // 
+        // 数据结构  计算机中组织数据的方式
+        // 数组: 有序、不定长、支持栈、队列操作
+        //      FILO  arr.push, arr.pop
+        //      FIFO  arr.push, arr.shift
+        // 对象: 键值对结构 key: value
+        // 
+        // 数组去重: '1'和1使用对象的方式不能去重
+        // key值存储对象会发生什么
+        // 
+        // ES6新的数据结构
+        // Map Set
+        // Map是字典、索引、目录, 是加强的对象
+        // let map = new Map([[key: value], [key: value]]);
+        // map.set(key, value);  类似于obj.key = value
+        // map.get(key);  类似于obj.key
+        // map.has(key);  是否存在该key值
+        // map.delete(key);  删除某个key的数据
+        // map.clear();  清空map中所有的数据
+        // 
+        // let Wmap = WeakMap();
+        // WeakMap弱引用
+        // 
+        // 内存回收机制
+        //     定时清理内存
+        //     内存达到一定量
+        // 
+        // Set
+        // 特点: 有序列表  包含相互独立且不相等的值
+        // let set = new Set([1, 1, 2, 3, 3, '1'])
     </script>
 </body>
 </html>
