feat: create patch by submit number nodes & back-end nodes supplement

--- a/revise-git.html
+++ b/revise-git.html
@@ -113,6 +113,10 @@
         //      <fileName>为空时查看全部日志
         //   3、查看历史操作记录
         //      git reflog
+        //
+        // patch
+        // 生成某次提交的补丁
+        // git format-patch -1 提交号 
 
         // HEXO
     </script>
