--- a/revise-node.html
+++ b/revise-node.html
@@ -153,5 +153,23 @@
             url.parse(url, transferToObj);
         */
     </script>
+
+    <script title="额外补充">
+        // 1、全栈后端掌握
+        //     读文件，写文件
+        //     读数据库，写数据库
+        //     读Cookie，写Cookie
+        //     上传文件，下载文件
+        //     页面跳转
+        
+        // 2、为什么大公司不使用session ？
+        //     三个时代
+        //     1) 轮询
+        //         导致每次请求的服务器都不相同
+        //     2) IP哈希
+        //         请求服务器相同，但有可能导致某台服务器负载
+        //     3) 服务治理平台
+        //         用户每次访问都去请求最闲的服务器
+    </script>
 </body>
 </html>
