--- a/revise-base.html
+++ b/revise-base.html
@@ -832,7 +832,7 @@
     // 2、var obj = new Object();
     // 3、function Person() {};                构造函数
     //    var person = new Person();
-    // 4、Object.create(ptoto, definedProperty)
+    // 4、Object.create(proto, definedProperty)
 
 
 
