--- a/revise-node.html
+++ b/revise-node.html
@@ -161,6 +161,14 @@
         //     读Cookie，写Cookie
         //     上传文件，下载文件
         //     页面跳转
+        // 
+        //     后端常用功能
+        //         自动登录：读Cookie 写Cookie
+        //         文件下载：读文件
+        //         文件上传：写文件
+        //         页面跳转：文件读取
+        //         数据上传：写数据库
+        //         数据拉取：读数据库
         
         // 2、为什么大公司不使用session ？
         //     三个时代
@@ -170,6 +178,10 @@
         //         请求服务器相同，但有可能导致某台服务器负载
         //     3) 服务治理平台
         //         用户每次访问都去请求最闲的服务器
+    </script>
+
+    <script title="express框架">
+        
     </script>
 </body>
 </html>
