--- a/revise-base.html
+++ b/revise-base.html
@@ -222,6 +222,8 @@
 	//  		  padding-top:100px;
 	//            overflow:hidden;
 
+// display: inline-block; + overflow: hidden;  会改变baseline
+// 解决方案：vertical-align: middle/bottom/top;
 
 
 
