myPromise resource achieve

--- a/revise-es6.html
+++ b/revise-es6.html
@@ -255,5 +255,91 @@
         // 为所有操作提供了统一的处理机制  想用then方法管理流程
         // 类似于try {} catch {} 中的try
     </script>
+    <script>
+        class myPromise {
+            constructor(fn) {
+                if (typeof fn !== 'function') {
+                    throw TypeError(`myPromise resolver ${fn} is not a function`)
+                }
+                this.status = 'pending'
+                this.data = undefined
+                this.resolveCBArr = []
+                this.rejectCBArr = []
+                let resolve = (data) => {
+                    if (this.status == 'pending') {
+                        setTimeout(() => {
+                            this.status = 'resolved'
+                            this.data = data
+                            this.resolveCBArr.forEach(fn => fn())
+                        }, 0)
+                    }
+                }
+                let reject = (data) => {
+                    if (this.status == 'pending') {
+                        setTimeout(() => {
+                            this.status = 'rejected'
+                            this.data = data
+                            this.rejectCBArr.forEach(fn => fn())
+                        }, 0)
+                    }
+                }
+
+                try {
+                    fn(resolve, reject)
+                } catch (e) {
+                    reject(e)
+                }
+            }
+            then(resolvedFn, rejectedFn) {
+                if (this.status === 'resolved') {
+                    let res = resolvedFn(this.data)
+                    if (res instanceof myPromise) {
+                        return res
+                    } else {
+                        return myPromise.resolve(res)
+                    }
+                }
+                if (this.status == 'rejected') {
+                    let res = rejectedFn(this.data)
+
+                    if (res instanceof myPromise) {
+                        return res
+                    } else {
+                        return myPromise.resolve(res)
+                    }
+                }
+                if (this.status == 'pending') {
+                    return new myPromise((resolve, reject) => {
+                        this.resolveCBArr.push(((resolvedFn) => {
+                            return () => {
+                                var res = resolvedFn(this.data)
+                                if (res instanceof myPromise) {
+                                    res.then(resolve, reject)
+                                } else {
+                                    resolve(res)
+                                }
+                            }
+                        })(resolvedFn))
+                        this.rejectCBArr.push(((rejectedFn) => {
+                            return () => {
+                                let res = rejectedFn(this.data)
+                                if (res instanceof myPromise) {
+                                    res.then(resolve, reject)
+                                } else {
+                                    resolve(res)
+                                }
+                            }
+                        })(rejectedFn))
+                    })
+                }
+            }
+            static resolve(data) {
+                return new myPromise(resolve => resolve(data))
+            }
+            static reject(data) {
+                return new myPromise((resolve, reject) => reject(data))
+            }
+        }
+    </script>
 </body>
 </html>
