--- a/revise-git.html
+++ b/revise-git.html
@@ -94,6 +94,14 @@
         //      hard回退至之前版本(未修改)
         //      <HEAD~num>: 
         //      <commit id>: 提交的版本号
+        //
+        // 远程版本库回退
+        //   1、查看提交日志详情
+        //      git reflog
+        //   2、回退本地版本
+        //      git reset --hard {commit id}
+        //   3、强制回退至远程分支
+        //      git push -f
         // 
         // 代码差异比较
         //   1、工作区与暂存区
